# curlhs

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README  README.md  Setup.hs  curlhs.cabal  index.html  params.json
Network/: CURL000.hs  CURL720.hs  CURL730.hs  CURLXXX.hs  Curl.hs  Curlhs.hs
Network/CURL000/: LibC0.c  LibCC.hsc  LibHS.hsc  LibLD.hs  Types.hsc
Network/Curl/: Easy.hs
Network/Curl/Easy/: CURLcode.hs  CURLenum.hs  CURLinfo.hs  Functions.hs  Symbols.hs  Types.hs
Network/Curl/FFI/: Easy.hs
Network/Curl/FFI/Easy/: Callbacks.hs  Functions.hs  Symbols.hsc  Types.hsc
Network/Curlhs/: Base.hs  Base.hsc  CURLcode.hs  CURLenum.hs  CURLinfo.hs  Core.hs  Core.hsc  Debug.hs  Easy.hs  Easy2.hsc  Errors.hsc  Functions.hs  Multi.hs  Setopt.hsc  Share.hs  Symbols.hs  Types.hs  TypesH.hs
Network/Curlhs/FFI/: Callbacks.hs  Functions.hs  Symbols.hsc  Types.hs  Types.hsc  TypesH.hsc
doc/: tutorial.md
docs/: README.md  index.html  tutorial.md
docs/examples/: GetInMemory.hs  Https.hs  Simple.hs
test/Network/: CURL000Spec.hs  CURL720Spec.hs  CURL730Spec.hs
